--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
 	<main>
 	
-	<div class="btn"><a href="./exploits/App2USB/index.html" class="button">APP2USB v13</a></div></div>
+	<div class="btn"><a href="./exploits/App2USB/index.html" class="button">APP2USB</a></div></div>
 	</br>
 	<div class="btn"><a href="./exploits/HEN/index.html" class="button">HEN</a></div></div>
 	</br>
