--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 	<html lang="en">
-	
+	<body bgcolor="#BBBBBB">
+
+
   	<head>
     	<title>PS4 Playground</title>
 	    <link rel="stylesheet" href="./css/css.css" type="text/css">
+		
+  
   	</head>
-	
 
   	<header>	<br />		
   		<h1>PS4 4.55 PLAYGROUND</h1><br>
 		<h2>By pearlxcore</h2>
 		<br /><br /><br />
   	</header>
-		
-	<main>
-	
-	<div class="btn"><a href="./exploits/App2USB/index.html" class="button">APP2USB</a></div></div>
-	</br>
-	<div class="btn"><a href="./exploits/HEN/index.html" class="button">HEN</a></div></div>
-	</br>
-	<div class="btn"><a href="./exploits/BROWSER/index.html" class="button">BROWSER</a></div></div>
-	</br>
-	<div class="btn"><a href="./exploits/FTP/index.html" class="button">FTP</a></div></div>
-	</br>
-	<div class="btn"><a href="./exploits/FW BLOCKER/index.html" class="button">FW blocker</a></div></div>
-	</br>
-	<div class="btn"><a href="./exploits/GTA/index.html" class="button">GTA MOD MENU</a></div></div>
-	</br>
-	<div class="btn"><a href="./exploits/LINUX/index.html" class="button">LINUX LOADER</a></div></div>
+			
 
+	<main>
+
+	<a href="./exploits/HEN/index.html" class="BUTTON">HEN</a>
+	
+	<a href="./exploits/App2USB/index.html" class="BUTTON">APP2USB</a>
+	
+	<a href="./exploits/BROWSER/index.html" class="BUTTON">BROWSER</a>
+	<br /><br /><br />
+	<a href="./exploits/FTP/index.html" class="BUTTON">FTP</a>
+	
+	<a href="./exploits/FW BLOCKER/index.html" class="BUTTON">FW BLOCKER</a>
+	
+	<a href="./exploits/GTA/index.html" class="BUTTON">GTA MOD MENU</a>
+	<br /><br /><br />
+	<a href="./exploits/LINUX/index.html" class="BUTTON">LINUX LOADER</a>
+	
+	<a href="./exploits/DUMPER/index.html" class="BUTTON">DUMPER</a>
+	<br /><br /><br />
+	
 	</main>
 		
-	
+
+	</body>
 </html>
